Reverse the sign of mXOffset in RTL runs so that the offset is always from left to right. Bug 378351, r=roc